--- a/toolbox.html
+++ b/toolbox.html
@@ -84,7 +84,7 @@
               <div id="impress">Placeholder for current Slide</div>
             </div>
             <div id="allSlidesDiv" class="content-table slidesPreview" style="display:none">
-              <div id="overview">Placeholder for slides Grid</div>
+              <div id="impressOverview">Placeholder for slides Grid</div>
             </div>
             <div id="teamsTableDiv" class="content-table" style="display:none">
               Placeholder for teams Table
