This is just a transfer of current state. Possibly breaks things.

--- a/console.html
+++ b/console.html
@@ -31,7 +31,7 @@
         <x-button id="openFile">Načítať prezentáciu</x-button>
       </div>
 
-      <div id="top-buttons">
+      <div id="impress-control-buttons">
         <x-buttons tracking="-1" id="gameControls">
           <x-button id="nextSlideBtn">
             <x-box>
