--- a/viewer.html
+++ b/viewer.html
@@ -7,18 +7,16 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>impress.js viewer</title>
   <link href="css/impress-demo.css" rel="stylesheet" />
-  <script>
-  </script>
+<!--  <link href="./turban-s4xe3/style.css" rel="stylesheet" />-->
+
 </head>
 
 <body class="impress-not-supported">
   <div class="fallback-message">
-    <p>Your browser <b>doesn't support the features required</b> by impress.js, so you are presented with a simplified version of this presentation.</p>
-    <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
+    <p> Impress fallback message</p>
   </div>
   <div id="container">
-    <div id="impress">
-    </div>
+    <div id="impress"></div>
   </div>
 
 </body>
@@ -28,9 +26,6 @@
   //require('./js/impress.js');
   window.$ = window.jQuery = require('jquery');
   require('./js/viewer-script.js');
-  //require('./js/impress.js');
-  </script>
-
-<script>//impress().init()</script>
+</script>
 
 </html>
