Fix for css bug (print was included), projektor coverted to webview

--- a/projector.html
+++ b/projector.html
@@ -25,8 +25,7 @@
     </ul>
   </div>
   <div id="container">
-    <div id="impress">
-    </div>
+    <webview id="impressCurrent" src="./viewer.html" autosize style="display:inline-flex;" nodeintegration></webview>
   </div>
 
 </body>
