--- a/viewer.html
+++ b/viewer.html
@@ -7,14 +7,15 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>impress.js viewer</title>
   <link href="css/impress-demo.css" rel="stylesheet" />
+  <style></style>
 <!--  <link href="./turban-s4xe3/style.css" rel="stylesheet" />-->
 
 </head>
 
 <body class="impress-not-supported">
-  <div class="fallback-message">
+  <!--<div class="fallback-message">
     <p> Impress fallback message</p>
-  </div>
+  </div>-->
   <div id="container">
     <div id="impress"></div>
   </div>
