Turban Presentations are finally working.

--- a/viewer.html
+++ b/viewer.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=1024" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>impress.js viewer</title>
-  <link href="css/impress-demo.css" rel="stylesheet" />
+  <!--<link href="css/impress-demo.css" rel="stylesheet" />-->
   <style></style>
-<!--  <link href="./turban-s4xe3/style.css" rel="stylesheet" />-->
+  <link href="./turban-s4xe3/style.css" rel="stylesheet" />
 
 </head>
 
