--- a/console.html
+++ b/console.html
@@ -84,10 +84,10 @@
               <webview id="impressCurrent" src="./viewer.html" autosize style="display:inline-flex;" nodeintegration></webview>
             </div>
             <div id="allSlidesDiv" class="content-table slidesPreview" style="display:none">
-              <div id="impressOverview">Placeholder for slides Grid</div>
+              <div id="impressOverview"></div>
             </div>
             <div id="teamsTableDiv" class="content-table" style="display:none">
-              Placeholder for teams Table
+              <webview id="drivePage" src="https://docs.google.com/spreadsheets/d/1jbzbHWI7JSi-hwx8cz1LE3TiI8RRRVj86UxyEc1iomo/edit?usp=drive_web" autosize style="display:inline-flex;" nodeintegration></webview>
             </div>
             <div id="optionsDiv" class="content-table" style="display:none">
               Placeholder for options
