--- a/projector.html
+++ b/projector.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1024" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>Turban Quiz Projector</title>
+  <title>impProjector</title>
   <!--<link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">-->
   <link rel="stylesheet" href="./css/styles-projector.css">
   <link href="css/impress-demo.css" rel="stylesheet" />
@@ -25,7 +25,7 @@
     </ul>
   </div>
   <div id="container">
-    <webview id="impressCurrent" src="./viewer.html" autosize style="display:inline-flex;" nodeintegration></webview>
+    <webview id="impressCurrent" src="./viewer.html" autosize style="display:flex;" nodeintegration></webview>
   </div>
 
 </body>
