--- a/viewer.html
+++ b/viewer.html
@@ -3,25 +3,26 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=1024" />
+  <!--<meta name="viewport" content="width=1024" />-->
+  <base href="/home/gnaag/Programy/turbanplayer/turban-s4xe3/">
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>impress.js viewer</title>
-  <!--<link href="css/impress-demo.css" rel="stylesheet" />-->
+  <title>impViewer</title>
+
   <style></style>
-  <link href="./turban-s4xe3/style.css" rel="stylesheet" />
+<!--  <link href="./turban-s4xe3/style.css" rel="stylesheet" />-->
 
 </head>
 
 <body class="impress-not-supported">
   <!--<div class="fallback-message">
-    <p> Impress fallback message</p>
+    <p> Hopla, impress chýba.</p>
   </div>-->
   <div id="container">
     <div id="impress"></div>
   </div>
 
 </body>
-<script src="js/impress.js"></script>
+<!--<script src="js/impress.js"></script>-->
 <script>
   // You can also require other files to run in this process
   //require('./js/impress.js');
