Moved webview generation into console (4x faster & modifiable)

--- a/console.html
+++ b/console.html
@@ -84,7 +84,7 @@
             </x-tabs>
 
             <div id="currentSlideDiv" class="content-table slidesPreview">
-              <webview id="impressCurrent" src="./viewer.html" autosize style="display:flex;" nodeintegration></webview>
+              <webview id="impressCurrent" autosize src="./viewer.html" style="display:flex;" nodeintegration></webview>
             </div>
             <div id="allSlidesDiv" class="content-table slidesPreview" style="display:none">
               <div id="impressOverview"></div>
