--- a/turban-s4xe3/viewer.html
+++ b/turban-s4xe3/viewer.html
@@ -2,7 +2,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <base id="baseTag" href="/home/gnaag/.config/turban-player/turban-s4xe3/" />
+        <base id="baseTag" href="/home/gnaag/Programy/turbanplayer/" />
         <title>impViewer</title>
         <style id="defaultStyleBox">atom-text-editor,
 :host {
@@ -190,11 +190,11 @@ atom-text-editor .markdown .link .string,
   color: #F8F8F0;
   background-color: #8FBE00;
 }
-.meta.structure.dictionary.json &gt; .string.quoted.double.json,
-.meta.structure.dictionary.json &gt; .string.quoted.double.json .punctuation.string {
+.meta.structure.dictionary.json &amp;gt; .string.quoted.double.json,
+.meta.structure.dictionary.json &amp;gt; .string.quoted.double.json .punctuation.string {
   color: #000080;
 }
-.meta.structure.dictionary.value.json &gt; .string.quoted.double.json {
+.meta.structure.dictionary.value.json &amp;gt; .string.quoted.double.json {
   color: #d14;
 }
 .meta.diff,
@@ -392,10 +392,10 @@ pre {
   clear: both;
   content: "";
 }
-.markdown-body &gt; *:first-child {
+.markdown-body &amp;gt; *:first-child {
   margin-top: 0 !important;
 }
-.markdown-body &gt; *:last-child {
+.markdown-body &amp;gt; *:last-child {
   margin-bottom: 0 !important;
 }
 a:not([href]) {
@@ -519,7 +519,7 @@ ol ul {
   margin-top: 0;
   margin-bottom: 0;
 }
-li &gt; p {
+li &amp;gt; p {
   margin-top: 16px;
 }
 dl {
@@ -541,10 +541,10 @@ blockquote {
   color: #777;
   border-left: 4px solid #ddd;
 }
-blockquote &gt; :first-child {
+blockquote &amp;gt; :first-child {
   margin-top: 0;
 }
-blockquote &gt; :last-child {
+blockquote &amp;gt; :last-child {
   margin-bottom: 0;
 }
 table {
@@ -587,7 +587,7 @@ code:after {
   letter-spacing: -0.2em;
   content: "\00a0";
 }
-pre &gt; code {
+pre &amp;gt; code {
   padding: 0;
   margin: 0;
   font-size: 100%;
@@ -857,7 +857,7 @@ kbd {
   }
 }
 </style>
-        <link id="projectionStyleLink" rel="stylesheet" type="text/css" href="/home/gnaag/.config/turban-player/turban-s4xe3/style.css" />
+        <link id="projectionStyleLink" rel="stylesheet" type="text/css" href="" />
         <style id="printStyleBox" media="print">* {
   /*CSS transitions*/
   -o-transition-property: none !important;
@@ -905,7 +905,7 @@ body {
 </style>
       </head>
       <body class="impress-not-supported">
-        <div id="container"><div id="impress"><div class="step" data-x="2600"><h1 id="user-content-vesmírny-turban-quiz-test" class="deep-link">Vesmírny Turban Quiz test</h1>
+        <div id="container"><div id="impress"><div class="step" data-x="2600"><h1 id="user-content-vesmírny-turban-quiz" class="deep-link">Vesmírny Turban Quiz</h1>
 </div><div class="step" data-x="5200"><h1 id="user-content-vesmírny-turban-quiz" class="deep-link">Vesmírny Turban Quiz</h1>
 <h2 id="user-content-1-kolo-falošný-vesmír" class="deep-link">1. kolo: Falošný vesmír</h2>
 </div><div class="step" data-x="7800"><h1 id="user-content-1-akému-komixu-patrí-obálka" class="deep-link">1. Akému komixu patrí obálka?</h1>
