--- a/viewer.html
+++ b/viewer.html
@@ -2,7 +2,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <base id="baseTag" href="/home/gnaag/.config/turban-player/turban-s4xe3/" />
+        <base id="baseTag" href="/home/gnaag/Programy/turbanplayer/examples/turban-s4xe3/" />
         <title>impViewer</title>
         <style id="defaultStyleBox">atom-text-editor,
 :host {
@@ -857,7 +857,7 @@ kbd {
   }
 }
 </style>
-        <link id="projectionStyleLink" rel="stylesheet" type="text/css" href="/home/gnaag/.config/turban-player/turban-s4xe3/style.css" />
+        <link id="projectionStyleLink" rel="stylesheet" type="text/css" href="/home/gnaag/Programy/turbanplayer/examples/turban-s4xe3/style.css" />
         <style id="printStyleBox" media="print">* {
   /*CSS transitions*/
   -o-transition-property: none !important;
@@ -905,7 +905,7 @@ body {
 </style>
       </head>
       <body class="impress-not-supported">
-        <div id="container"><div id="impress"><div class="step" data-x="2600"><h1 id="user-content-vesmírny-turban-quiz-test" class="deep-link">Vesmírny Turban Quiz test</h1>
+        <div id="container"><div id="impress"><div class="step" data-x="2600"><h1 id="user-content-vesmírny-turban-quiz" class="deep-link">Vesmírny Turban Quiz</h1>
 </div><div class="step" data-x="5200"><h1 id="user-content-vesmírny-turban-quiz" class="deep-link">Vesmírny Turban Quiz</h1>
 <h2 id="user-content-1-kolo-falošný-vesmír" class="deep-link">1. kolo: Falošný vesmír</h2>
 </div><div class="step" data-x="7800"><h1 id="user-content-1-akému-komixu-patrí-obálka" class="deep-link">1. Akému komixu patrí obálka?</h1>
