--- a/console.html
+++ b/console.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -21,23 +22,19 @@
           <x-button id="projectorBtn">
             <x-icon name="airplay"></x-icon>
           </x-button>
-
           <x-button id="fullscreenBtn">
             <x-icon name="fullscreen"></x-icon>
           </x-button>
-
           <x-button id="rulesBtn">
             <x-icon name="assignment"></x-icon>
           </x-button>
         </x-buttons>
-        <!--<input type="file" />-->
-
-        <x-button id="openFile"></x-button>
+        <x-button id="openFile">Load Presentation</x-button>
         <x-buttons tracking="-1" id="gameControls" class="impressControlBtns">
           <x-button id="nextSlideBtn">
             <x-box>
               <x-icon name="skip-next"></x-icon>
-              <x-label id="nextSlideLabel">Ďalší snímok</x-label>
+              <x-label id="nextSlideLabel">Next Slide</x-label>
             </x-box>
           </x-button>
           <x-button id="prevSlideBtn" class="danger">
@@ -58,27 +55,27 @@
               <x-tab selected id="currentSlideTab">
                 <x-box>
                   <x-icon name="list"></x-icon>
-                  <x-label id="tabLabelCurrentSlide"></x-label>
+                  <x-label id="tabLabelCurrentSlide">Presentation</x-label>
                 </x-box>
               </x-tab>
 
               <x-tab id="allSlidesTab">
                 <x-box>
                   <x-icon name="sort"></x-icon>
-                  <x-label id="tabLabelAllSlides"></x-label>
+                  <x-label id="tabLabelAllSlides">Slides List</x-label>
                 </x-box>
               </x-tab>
               <x-tab id="teamsTableTab">
                 <x-box>
                   <x-icon name="settings"></x-icon>
-                  <x-label id="tabLabelRemoteSources"></x-label>
+                  <x-label id="tabLabelRemoteSources">Remote Sources</x-label>
                 </x-box>
               </x-tab>
 
               <x-tab id="optionsTab">
                 <x-box>
                   <x-icon name="settings"></x-icon>
-                  <x-label id="tabLabelSettings"></x-label>
+                  <x-label id="tabLabelSettings">Options</x-label>
                 </x-box>
               </x-tab>
             </x-tabs>
@@ -117,31 +114,30 @@
     </div>
   </div>
   <x-dialog id="exitDialog">
-    <h4 id="exitTitle"></h4>
-    <p  id="exitText"></p>
+    <h4 id="exitTitle">Are you sure about exiting impressPlayer?</h4>
+    <p  id="exitText">Actually nothing bad could happen if you exit now, but still. <br />Do you really want to do it?</p>
     <x-buttons tracking="-1" id="windowControls">
       <x-button id="reallyQuit" class="danger">
         <x-box>
           <x-icon name="exit-to-app"></x-icon>
-          <x-label  id="exitAgree"></x-label>
+          <x-label  id="exitAgree">Yes, get me out of here!</x-label>
         </x-box>
       </x-button>
       <x-button id="doNotQuit">
         <x-box>
           <x-icon name="replay"></x-icon>
-          <x-label  id="exitDisagree"></x-label>
+          <x-label  id="exitDisagree">No, I haven't finished yet</x-label>
         </x-box>
       </x-button>
     </x-buttons>
   </x-dialog>
+  </body>
+  <script>
+    // You can also require other files to run in this process
+    window.$ = window.jQuery = require('jquery');
+    require('./renderer.js');
+    require('./js/console-script.js');
+    require('./js/impress.js');
+  </script>
 
-</body>
-<script>
-  // You can also require other files to run in this process
-  window.$ = window.jQuery = require('jquery');
-  require('./renderer.js');
-  require('./js/console-script.js');
-  require('./js/impress.js');
-</script>
-
-</html>
+  </html>
