--- a/console.html
+++ b/console.html
@@ -29,12 +29,12 @@
             <x-icon name="assignment"></x-icon>
           </x-button>
         </x-buttons>
-        <x-button id="openFile">Load Presentation</x-button>
+        <x-button id="openFile">Načítaj prezentáciu</x-button>
         <x-buttons tracking="-1" id="gameControls" class="impressControlBtns">
           <x-button id="nextSlideBtn">
             <x-box>
               <x-icon name="skip-next"></x-icon>
-              <x-label id="nextSlideLabel">Next Slide</x-label>
+              <x-label id="nextSlideLabel">Ďalší snímok</x-label>
             </x-box>
           </x-button>
           <x-button id="prevSlideBtn" class="danger">
@@ -55,27 +55,27 @@
               <x-tab selected id="currentSlideTab">
                 <x-box>
                   <x-icon name="list"></x-icon>
-                  <x-label id="tabLabelCurrentSlide">Presentation</x-label>
+                  <x-label id="tabLabelCurrentSlide">Projekcia</x-label>
                 </x-box>
               </x-tab>
 
               <x-tab id="allSlidesTab">
                 <x-box>
                   <x-icon name="sort"></x-icon>
-                  <x-label id="tabLabelAllSlides">Slides List</x-label>
+                  <x-label id="tabLabelAllSlides">Zoznam snímkov</x-label>
                 </x-box>
               </x-tab>
               <x-tab id="teamsTableTab">
                 <x-box>
                   <x-icon name="settings"></x-icon>
-                  <x-label id="tabLabelRemoteSources">Remote Sources</x-label>
+                  <x-label id="tabLabelRemoteSources">Iné zdroje</x-label>
                 </x-box>
               </x-tab>
 
               <x-tab id="optionsTab">
                 <x-box>
                   <x-icon name="settings"></x-icon>
-                  <x-label id="tabLabelSettings">Options</x-label>
+                  <x-label id="tabLabelSettings">Nastavenia</x-label>
                 </x-box>
               </x-tab>
             </x-tabs>
@@ -114,19 +114,20 @@
     </div>
   </div>
   <x-dialog id="exitDialog">
-    <h4 id="exitTitle">Are you sure about exiting impressPlayer?</h4>
-    <p  id="exitText">Actually nothing bad could happen if you exit now, but still. <br />Do you really want to do it?</p>
+    <h4 id="exitTitle">Si si istý, že chceš ukončiť impressPlayer?</h4>
+    <p  id="exitText">Nič zlého sa vlastne nemôže stať, ale aj tak sa ťa pre istotu opýtam znova. 
+Naozaj to chceš urobiť?</p>
     <x-buttons tracking="-1" id="windowControls">
       <x-button id="reallyQuit" class="danger">
         <x-box>
           <x-icon name="exit-to-app"></x-icon>
-          <x-label  id="exitAgree">Yes, get me out of here!</x-label>
+          <x-label  id="exitAgree">Áno, dostaň ma odtiaľto!</x-label>
         </x-box>
       </x-button>
       <x-button id="doNotQuit">
         <x-box>
           <x-icon name="replay"></x-icon>
-          <x-label  id="exitDisagree">No, I haven't finished yet</x-label>
+          <x-label  id="exitDisagree">Nie, ešte som neskončil</x-label>
         </x-box>
       </x-button>
     </x-buttons>
