Various "finishings" and version bump

--- a/projector.html
+++ b/projector.html
@@ -26,6 +26,7 @@
   </div>
   <div id="container">
     <webview id="impressCurrent" src="./viewer.html" autosize style="display:flex;" nodeintegration></webview>
+    <div class="impressCurtain"></div>
   </div>
 
 </body>
