Audio Video Controls and .tpl files

--- a/projector.html
+++ b/projector.html
@@ -6,18 +6,12 @@
   <meta name="viewport" content="width=1024" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>impProjector</title>
-  <!--<link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">-->
   <link rel="stylesheet" href="./css/styles-projector.css">
-  <link href="css/impress-demo.css" rel="stylesheet" />
   <script>
   </script>
 </head>
 
-<body class="impress-not-supported">
-  <div class="fallback-message">
-    <p>Your browser <b>doesn't support the features required</b> by impress.js, so you are presented with a simplified version of this presentation.</p>
-    <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
-  </div>
+<body>
   <div class="rules" style="display:none">
     <h2>Toto sú pravidlá</h2>
     <ul>
