Get rid of jQuery, change xel-theme, enhance media Buttons.

--- a/projector.html
+++ b/projector.html
@@ -26,10 +26,8 @@
 </body>
 <script>
   // You can also require other files to run in this process
-  window.$ = window.jQuery = require('jquery');
-  require('./renderer.js');
+  //window.$ = window.jQuery = require('jquery');
   require('./js/projektor-script.js');
-  require('./js/impress.js');
 </script>
 
 </html>
