--- a/console.html
+++ b/console.html
@@ -5,18 +5,21 @@
   <meta charset="UTF-8">
   <title>impPlayer</title>
   <link rel="import" href="./node_modules/xel/xel.min.html">
-  <link rel="stylesheet" href="./node_modules/xel/stylesheets/material.theme.css">
+  <!--<link rel="stylesheet" href="./node_modules/xel/stylesheets/material.theme.css">-->
+  <link rel="stylesheet" href="node_modules/xel/stylesheets/galaxy.theme.css">
   <link rel="stylesheet" href="./css/styles-console.css">
-  <link href="css/impress-admin.css" rel="stylesheet" />
 </head>
 
 <body>
   <div id="container">
     <div id="topbox">
       <x-card id="infobox">
-        <x-buttons tracking="2" id="projectorControls">
+        <x-buttons tracking="2" id="projectorControls" class="topButtons">
           <x-button id="reloadBtn" class="danger" title="Click to reload the application">
             <x-icon name="power-settings-new"></x-icon>
+          </x-button>
+          <x-button id="disclamerBtn" class="hidden">
+            <x-icon name="assignment"></x-icon>
           </x-button>
           <x-button id="projectorBtn" title="Click to open projection window">
             <x-icon name="airplay"></x-icon>
@@ -24,22 +27,22 @@
           <x-button id="fullscreenBtn" title="Click to make projection window fullscreen">
             <x-icon name="fullscreen"></x-icon>
           </x-button>
-          <!--
-          <x-button id="rulesBtn">
-            <x-icon name="assignment"></x-icon>
-          </x-button>
-          -->
+
+
+
         </x-buttons>
-        <x-buttons tracking="-1" id="audiovideoControls" class="audiovideoControls" style="display:none">
-          <x-button id="playPauseBtn">
-              <x-icon name="play-arrow"></x-icon>
+        <x-buttons tracking="-1" id="audiovideoControls" class="topButtons audiovideoControls hidden">
+          <x-button id="playPauseMediaBtn">
+            <x-icon name="play-arrow"></x-icon>
           </x-button>
-          <x-button id="reloadBtn">
+          <x-button id="restartMediaBtn">
             <x-icon name="replay"></x-icon>
           </x-button>
         </x-buttons>
-        <x-buttons tracking="-1" id="gameControls">
-        <x-button id="openFile">Načítaj prezentáciu</x-button>
+        <x-buttons tracking="-1" id="gameControls" class="topButtons">
+          <x-button id="openFile">Načítaj prezentáciu</x-button>
+          <x-buttons>
+        <x-buttons tracking="-1" id="gameControls" class="topButtons">
           <x-button id="nextSlideBtn" class="impressControlBtns">
             <x-box>
               <x-icon name="skip-next"></x-icon>
@@ -68,40 +71,41 @@
                 </x-box>
               </x-tab>
 
-              <x-tab id="allSlidesTab">
-                <x-box>
-                  <x-icon name="sort"></x-icon>
-                  <x-label id="tabLabelAllSlides">Zoznam snímkov</x-label>
-                </x-box>
-              </x-tab>
-              <!--
-              <x-tab id="teamsTableTab">
+
+              <x-tab id="remoteSourcesTab" class="hidden">
                 <x-box>
                   <x-icon name="settings"></x-icon>
                   <x-label id="tabLabelRemoteSources">Iné zdroje</x-label>
                 </x-box>
               </x-tab>
 
-              <x-tab id="optionsTab">
+              <x-tab id="optionsTab" class="hidden">
                 <x-box>
                   <x-icon name="settings"></x-icon>
                   <x-label id="tabLabelSettings">Nastavenia</x-label>
                 </x-box>
               </x-tab>
-              -->
+              <x-tab id="allSlidesTab">
+                <x-box>
+                  <x-icon name="sort"></x-icon>
+                  <x-label id="tabLabelAllSlides">Zoznam snímkov</x-label>
+                </x-box>
+              </x-tab>
             </x-tabs>
 
             <div id="currentSlideDiv" class="content-table slidesPreview">
               <webview id="impressCurrent" autosize src="./viewer.html" style="display:flex;" nodeintegration></webview>
-              <div class="impressCurtain"><!-- The curtain preventing focusing webview element --></div>
+              <div class="impressCurtain">
+                <!-- The curtain preventing focusing webview element -->
+              </div>
             </div>
-            <div id="allSlidesDiv" class="content-table slidesPreview" style="display:none">
+            <div id="allSlidesDiv" class="content-table hidden">
               <div id="impressOverview"></div>
             </div>
-            <div id="remoteSourcesDiv" class="content-table" style="display:none">
+            <div id="remoteSourcesDiv" class="content-table hidden">
               Placeholder for remote sources
             </div>
-            <div id="optionsDiv" class="content-table" style="display:none">
+            <div id="optionsDiv" class="content-table hidden">
               Placeholder for options
             </div>
           </x-card>
@@ -112,11 +116,15 @@
         <div id="sideCards">
           <x-card class="nextSlide nextSlide-1">
             <webview id="nextImpress-1" class="slidesPreview" src="./viewer.html" webpreferences="focusable: false" autosize style="display:flex;" nodeintegration></webview>
-            <div class="impressCurtain"><!-- The curtain preventing focusing webview element --></div>
+            <div class="impressCurtain">
+              <!-- The curtain preventing focusing webview element -->
+            </div>
           </x-card>
           <x-card class="nextSlide nextSlide-2">
             <webview id="nextImpress-2" class="slidesPreview" src="./viewer.html" autosize style="display:flex;" nodeintegration></webview>
-            <div class="impressCurtain"><!-- The curtain preventing focusing webview element --></div>
+            <div class="impressCurtain">
+              <!-- The curtain preventing focusing webview element -->
+            </div>
           </x-card>
           <x-card class="nextSlide sideInfo">
             <div id="bigTimer"><span id="projectionTimer" title="Click to reset timer">00:00:00</span></div>
@@ -129,30 +137,27 @@
   </div>
   <x-dialog id="exitDialog">
     <h4 id="exitTitle">Si si istý, že chceš ukončiť impressPlayer?</h4>
-    <p  id="exitText">Nič zlého sa vlastne nemôže stať, ale aj tak sa ťa pre istotu opýtam znova. 
+    <p id="exitText">Nič zlého sa vlastne nemôže stať, ale aj tak sa ťa pre istotu opýtam znova. 
 Naozaj to chceš urobiť?</p>
     <x-buttons tracking="-1" id="windowControls">
       <x-button id="reallyQuit" class="danger">
         <x-box>
           <x-icon name="exit-to-app"></x-icon>
-          <x-label  id="exitAgree">Áno, dostaň ma odtiaľto!</x-label>
+          <x-label id="exitAgree">Áno, dostaň ma odtiaľto!</x-label>
         </x-box>
       </x-button>
       <x-button id="doNotQuit">
         <x-box>
           <x-icon name="replay"></x-icon>
-          <x-label  id="exitDisagree">Nie, ešte som neskončil</x-label>
+          <x-label id="exitDisagree">Nie, ešte som neskončil</x-label>
         </x-box>
       </x-button>
     </x-buttons>
   </x-dialog>
-  </body>
-  <script>
-    // You can also require other files to run in this process
-    window.$ = window.jQuery = require('jquery');
-    require('./renderer.js');
-    require('./js/console-script.js');
-    require('./js/impress.js');
-  </script>
+</body>
+<script>
+  // You can also require other files to run in this process
+  require('./js/console-script.js');
+</script>
 
-  </html>
+</html>
