--- a/viewer.html
+++ b/viewer.html
@@ -905,90 +905,132 @@ body {
 </style>
   </head>
   <body class="impress-not-supported">
-    <div id="container"><div id="impress"><div class="step" data-x="2600"><h1 id="user-content-vesmírny-turban-quiz" class="deep-link">Vesmírny Turban Quiz</h1>
-</div><div class="step" data-x="5200"><h1 id="user-content-vesmírny-turban-quiz" class="deep-link">Vesmírny Turban Quiz</h1>
+    <div id="container"><div id="impress"><div class="step" data-y="1400"><h1 id="user-content-komixový-turban-quiz" class="deep-link">Komixový Turban Quiz</h1>
+</div><div class="step" data-y="2800"><h1 id="user-content-komixový-turban-quiz" class="deep-link">Komixový Turban Quiz</h1>
 <audio width="100%" autoplay="">
   <source src="audiovideo/guru.mp3" type="audio/mp3" />
-  Your browser does not support the video tag.
 </audio>
-<h2 id="user-content-1-kolo-falošný-vesmír" class="deep-link">1. kolo: Falošný vesmír</h2>
-</div><div class="step" data-x="7800"><h1 id="user-content-1-akému-komixu-patrí-obálka" class="deep-link">1. Akému komixu patrí obálka?</h1>
+<h2 id="user-content-1-kolo-komix" class="deep-link">1. kolo: Komix</h2>
+</div><div class="step" data-y="4200"><h1 id="user-content-1-akému-komixu-patrí-obálka" class="deep-link">1. Akému komixu patrí obálka?</h1>
 <p><img src="111.jpg" alt="Wolverine" />
 <img src="112.jpg" alt="Batman" /></p>
 <p><img src="113.jpg" alt="Watchmen" />
 <img src="114.jpg" alt="Maus" /></p>
-</div><div class="step" data-x="10400"><h1 id="user-content-2-patrí-komix-marvelu-alebo-dc" class="deep-link">2. Patrí komix Marvelu alebo DC?</h1>
-<p><img src="12.jpg" alt="first" /></p>
+</div><div class="step" data-y="5600"><h1 id="user-content-2-patrí-komix-marvelu-alebo-dc" class="deep-link">2. Patrí komix Marvelu alebo DC?</h1>
+<p><img src="12.jpg" alt="img" /></p>
 <p>X-men, Strážcovia galaxie, Green Lantern, Fantastic Four, Aquaman, Deadool, Green Arrow, Lois Lane</p>
-</div><div class="step" data-x="13000"><h1 id="user-content-3-najdrahšie-komixy" class="deep-link">3. Najdrahšie komixy</h1>
+</div><div class="step" data-y="7000"><h1 id="user-content-3-najdrahšie-komixy" class="deep-link">3. Najdrahšie komixy</h1>
 <ol>
 <li>Najdrahší komix vôbec Action Comics #1 sa naposledy predal za $3,207,852. O ktorom hrdinovi je?</li>
 <li>Druhú priečku ($1,100,000) získal Amazing Fantasy #15. O kom je?</li>
 <li>Na tretej priečke ($1,075,000) je Detective Comics #27. Ktorý hrdina v tomto diele začal svoju kariéru?</li>
 </ol>
-<p><img src="13.jpg" alt="first" /></p>
-</div><div class="step" data-x="15600"><h1 id="user-content-4-obrázkogramy-seriálov" class="deep-link">4. Obrázkogramy seriálov</h1>
-</div><div class="step" data-x="18200"><h1 id="user-content-5-čo-ste-videli-vo-videu" class="deep-link">5. Čo ste videli vo videu?</h1>
+<p><img src="13.jpg" alt="img" /></p>
+</div><div class="step" data-y="8400"><h1 id="user-content-4-obrázkogramy-seriálov" class="deep-link">4. Obrázkogramy seriálov</h1>
+</div><div class="step" data-y="9800"><h1 id="user-content-5-čo-ste-videli-vo-videu" class="deep-link">5. Čo ste videli vo videu?</h1>
 <video width="100%" autoplay="">
   <source src="audiovideo/batman-bomb.mp4" type="video/mp4" />
-  Your browser does not support the video tag.
 </video>
-</div><div class="step" data-x="20800"><h1 id="user-content-5-čo-ste-videli-vo-videu" class="deep-link">5. Čo ste videli vo videu?</h1>
-<p><img src="15.jpg" alt="first" /></p>
+</div><div class="step" data-y="11200"><h1 id="user-content-5-čo-ste-videli-vo-videu" class="deep-link">5. Čo ste videli vo videu?</h1>
+<p><img src="15.jpg" alt="img" /></p>
 <ol>
 <li>Akej farby bol čln, v ktorom sa bozkával párik?</li>
 <li>Koľko kačičiek plávalo vo vode?</li>
 <li>V akom poradi stretol Batman kapelu, mníšky a matku s kočíkom?</li>
 <li>Koľkokrát vykríkol Robin "Batman"?</li>
 </ol>
-</div><div class="step" data-x="23400"><h1 id="user-content-6-ako-sa-volajú-ženské-superhrdinky" class="deep-link">6. Ako sa volajú ženské superhrdinky</h1>
-<p><img src="161.jpg" alt="first" /></p>
-<p><img src="162.jpg" alt="first" /></p>
-<p><img src="163.jpg" alt="first" /></p>
-<p><img src="164.jpg" alt="first" /></p>
-</div><div class="step" data-x="26000"><h1 id="user-content-6-ako-sa-volajú-ženské-superhrdinky" class="deep-link">6. Ako sa volajú ženské superhrdinky</h1>
-<p><img src="165.jpg" alt="first" /></p>
-<p><img src="166.jpg" alt="first" /></p>
-<p><img src="167.jpg" alt="first" /></p>
-<p><img src="168.jpg" alt="first" /></p>
-</div><div class="step" data-x="28600"><h1 id="user-content-vesmírny-turban-quiz" class="deep-link">Vesmírny Turban Quiz</h1>
-<h2 id="user-content-1-kolo-falošný-vesmír" class="deep-link">1. kolo: Falošný vesmír</h2>
+</div><div class="step" data-y="12600"><h1 id="user-content-6-ako-sa-volajú-ženské-superhrdinky" class="deep-link">6. Ako sa volajú ženské superhrdinky</h1>
+<p><img src="161.jpg" alt="img" /></p>
+<p><img src="162.jpg" alt="img" /></p>
+<p><img src="163.jpg" alt="img" /></p>
+<p><img src="164.jpg" alt="img" /></p>
+</div><div class="step" data-y="14000"><h1 id="user-content-6-ako-sa-volajú-ženské-superhrdinky" class="deep-link">6. Ako sa volajú ženské superhrdinky</h1>
+<p><img src="165.jpg" alt="img" /></p>
+<p><img src="166.jpg" alt="img" /></p>
+<p><img src="167.jpg" alt="img" /></p>
+<p><img src="168.jpg" alt="img" /></p>
+</div><div class="step" data-y="15400"><h1 id="user-content-vesmírny-turban-quiz" class="deep-link">Vesmírny Turban Quiz</h1>
+<h2 id="user-content-1-kolo-komix" class="deep-link">1. kolo: Komix</h2>
 <h3 id="user-content-odpovede" class="deep-link">odpovede</h3>
-</div><div class="step" data-x="31200"><h1 id="user-content-1-akému-komixu-patrí-obálka" class="deep-link">1. Akému komixu patrí obálka?</h1>
+</div><div class="step" data-y="16800"><h1 id="user-content-1-akému-komixu-patrí-obálka" class="deep-link">1. Akému komixu patrí obálka?</h1>
 <p><img src="111.jpg" alt="Wolverine" /> <span class="picanswer">Wolverine</span>
 <img src="112.jpg" alt="Batman" /> <span class="picanswer">Batman</span></p>
 <p><img src="113.jpg" alt="Watchmen" /> <span class="picanswer">Watchmen</span>
 <img src="114.jpg" alt="Maus" /> <span class="picanswer">Maus</span></p>
-</div><div class="step" data-x="33800"><h1 id="user-content-2-patrí-komix-marvelu-alebo-dc" class="deep-link">2. Patrí komix Marvelu alebo DC?</h1>
-<p><img src="12.jpg" alt="first" /></p>
+</div><div class="step" data-y="18200"><h1 id="user-content-2-patrí-komix-marvelu-alebo-dc" class="deep-link">2. Patrí komix Marvelu alebo DC?</h1>
+<p><img src="12.jpg" alt="img" /></p>
 <p>DC: <span class="answer">Green Lantern, Green Arrow, Lois Lane, Aquaman</span>
 Marvel: <span class="answer">X-men, Strážcovia galaxie,  Fantastic Four, Deadool</span></p>
-</div><div class="step" data-x="36400"><h1 id="user-content-3-najdrahšie-komixy" class="deep-link">3. Najdrahšie komixy</h1>
+</div><div class="step" data-y="19600"><h1 id="user-content-3-najdrahšie-komixy" class="deep-link">3. Najdrahšie komixy</h1>
 <ol>
 <li>Najdrahší komix vôbec Action Comics #1 sa naposledy predal za $3,207,852. O ktorom hrdinovi je? <span class="answer">O Supermanovi</span></li>
 <li>Druhú priečku ($1,100,000) získal Amazing Fantasy #15. O kom je? <span class="answer">O Spidermanovi</span></li>
 <li>Na tretej priečke ($1,075,000) je Detective Comics #27. Ktorý hrdina v tomto diele začal svoju kariéru? <span class="answer">O Batmanovi</span></li>
 </ol>
-<p><img src="13.jpg" alt="first" /></p>
-</div><div class="step" data-x="39000"><h1 id="user-content-4-obrázkogramy-seriálov" class="deep-link">4. Obrázkogramy seriálov</h1>
-</div><div class="step" data-x="41600"><h1 id="user-content-5-čo-ste-videli-vo-videu" class="deep-link">5. Čo ste videli vo videu?</h1>
-<p><img src="15.jpg" alt="first" /></p>
+<p><img src="13.jpg" alt="img" /></p>
+</div><div class="step" data-y="21000"><h1 id="user-content-4-obrázkogramy-seriálov" class="deep-link">4. Obrázkogramy seriálov</h1>
+</div><div class="step" data-y="22400"><h1 id="user-content-5-čo-ste-videli-vo-videu" class="deep-link">5. Čo ste videli vo videu?</h1>
+<p><img src="15.jpg" alt="img" /></p>
 <ol>
 <li>Akej farby bol čln, v ktorom sa bozkával párik? <span class="answer">Bielej</span></li>
 <li>Koľko kačičiek plávalo vo vode? <span class="answer">Päť</span></li>
 <li>V akom poradi stretol Batman kapelu, mníšky a matku s kočíkom? <span class="answer">Matka, kapela, mníšky</span></li>
 <li>Koľkokrát vykríkol Robin "Batman"? <span class="answer">2x</span></li>
 </ol>
-</div><div class="step" data-x="44200"><h1 id="user-content-6-ako-sa-volajú-ženské-superhrdinky" class="deep-link">6. Ako sa volajú ženské superhrdinky</h1>
-<p><img src="161.jpg" alt="first" /><span class="picanswer">Black Widow</span></p>
-<p><img src="162.jpg" alt="first" /><span class="picanswer">Suzanne</span></p>
-<p><img src="163.jpg" alt="first" /><span class="picanswer">Gamora</span></p>
-<p><img src="164.jpg" alt="first" /><span class="picanswer">She-Hulk</span></p>
-</div><div class="step" data-x="46800"><h1 id="user-content-6-ako-sa-volajú-ženské-superhrdinky" class="deep-link">6. Ako sa volajú ženské superhrdinky</h1>
-<p><img src="165.jpg" alt="first" /><span class="picanswer">Scarlet Witch</span></p>
-<p><img src="166.jpg" alt="first" /><span class="picanswer">Captain Marvel</span></p>
-<p><img src="167.jpg" alt="first" /><span class="picanswer">Batgirl</span></p>
-<p><img src="168.jpg" alt="first" /><span class="picanswer">Supergirl</span></p>
+</div><div class="step" data-y="23800"><h1 id="user-content-6-ako-sa-volajú-ženské-superhrdinky" class="deep-link">6. Ako sa volajú ženské superhrdinky</h1>
+<p><img src="161.jpg" alt="img" /><span class="picanswer">Black Widow</span></p>
+<p><img src="162.jpg" alt="img" /><span class="picanswer">Suzanne</span></p>
+<p><img src="163.jpg" alt="img" /><span class="picanswer">Gamora</span></p>
+<p><img src="164.jpg" alt="img" /><span class="picanswer">She-Hulk</span></p>
+</div><div class="step" data-y="25200"><h1 id="user-content-6-ako-sa-volajú-ženské-superhrdinky" class="deep-link">6. Ako sa volajú ženské superhrdinky</h1>
+<p><img src="165.jpg" alt="img" /><span class="picanswer">Scarlet Witch</span></p>
+<p><img src="166.jpg" alt="img" /><span class="picanswer">Captain Marvel</span></p>
+<p><img src="167.jpg" alt="img" /><span class="picanswer">Batgirl</span></p>
+<p><img src="168.jpg" alt="img" /><span class="picanswer">Supergirl</span></p>
+</div><div class="step" data-y="26600"><h1 id="user-content-vesmírny-turban-quiz" class="deep-link">Vesmírny Turban Quiz</h1>
+<h2 id="user-content-2-kolo-komix" class="deep-link">2. kolo: Komix</h2>
+</div><div class="step" data-y="28000"><h1 id="user-content-1-čo-je-to-a-komu-to-patrí" class="deep-link">1. Čo je to a komu to patrí?</h1>
+<p><img src="211.jpg" alt="img" />
+<img src="212.jpg" alt="img" /></p>
+<p><img src="213.jpg" alt="img" />
+<img src="214.jpg" alt="img" /></p>
+</div><div class="step" data-y="29400"><h1 id="user-content-2-garfield" class="deep-link">2. Garfield</h1>
+<ol>
+<li>Ako sa volá Garfieldov vlastník?</li>
+<li>V ktorej európskej krajine sa Garfield volá Karvinen?</li>
+<li>Garfield drží rekord v počte rôznych novín a magazínov, ktoré ho niekedy vytlačili. Koľko ich je? (tol. 300)</li>
+</ol>
+<p><img src="22.jpg" alt="img" /></p>
+</div><div class="step" data-y="30800"><h1 id="user-content-3-zvučky-seriálov" class="deep-link">3. Zvučky seriálov?</h1>
+<video width="100%" autoplay="">
+  <source src="audiovideo/komixy-zvucky.mp4" autoplay="" type="video/mp4" />
+</video>
+</div><div class="step" data-y="32200"><h1 id="user-content-3-zvučky-seriálov" class="deep-link">3. Zvučky seriálov?</h1>
+<p><img src="23.jpg" alt="img" /></p>
+<p>Z akého seriálu je zvučka?</p>
+</div><div class="step" data-y="33600"><h1 id="user-content-4-ako-sa-volajú-tieto-české-komixy" class="deep-link">4. Ako sa volajú tieto české komixy?</h1>
+<p><img src="241.jpg" alt="img" /></p>
+<p><img src="242.jpg" alt="img" /></p>
+</div><div class="step" data-y="35000"><h1 id="user-content-4-ako-sa-volajú-tieto-české-komixy" class="deep-link">4. Ako sa volajú tieto české komixy?</h1>
+<p><img src="243.jpg" alt="img" /></p>
+<p><img src="244.jpg" alt="img" /></p>
+</div><div class="step" data-y="36400"><h1 id="user-content-5-asterix" class="deep-link">5. Asterix</h1>
+<p><img src="25.jpg" alt="img" /></p>
+<ol>
+<li>Na ktorej časti oblečenia mal Asterix krídelká?</li>
+<li>V ktorom storočí sa odohráva komix Asterix?</li>
+<li>Koľko hraných filmov o Asterixovi zatiaľ vyšlo?</li>
+</ol>
+</div><div class="step" data-y="37800"><h1 id="user-content-6-kto-je-to" class="deep-link">6. Kto je to?</h1>
+<p><img src="261.jpg" alt="img" /></p>
+<p><img src="262.jpg" alt="img" /></p>
+<p><img src="263.jpg" alt="img" /></p>
+<p><img src="264.jpg" alt="img" /></p>
+</div><div class="step" data-y="39200"><h1 id="user-content-6-kto-je-to" class="deep-link">6. Kto je to?</h1>
+<p><img src="265.jpg" alt="img" />
+<img src="266.jpg" alt="img" /></p>
+<p><img src="267.jpg" alt="img" />
+<img src="268.jpg" alt="img" /></p>
 </div></div></div>
   
   <script id="impressScript" src="/home/gnaag/Programy/turbanplayer/js/impress.js"></script>
