--- a/controller.html
+++ b/controller.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>impressPlayer Console</title>
-  <base href="{{{dirname}}}" />
+  <title>impressPlayer Controller</title>
+  <base href="/home/gnaag/Programy/impressPlayer" />
   <!--<link rel="stylesheet" href="./node_modules/xel/stylesheets/material.theme.css">-->
-  <link rel="stylesheet" href="{{{appPath}}}/node_modules/xel/themes/material.css">
-  <link rel="stylesheet" href="{{{appPath}}}/css/styles-console.css">
-  <script src="{{{appPath}}}/node_modules/xel/xel.min.js"></script>
+  <link rel="stylesheet" href="/home/gnaag/Programy/impressPlayer/node_modules/xel/themes/material.css">
+  <link rel="stylesheet" href="/home/gnaag/Programy/impressPlayer/css/styles-controller.css">
+  <script src="/home/gnaag/Programy/impressPlayer/node_modules/xel/xel.min.js"></script>
 
 </head>
 
@@ -18,16 +18,16 @@
       <x-card id="infobox">
         <x-buttons tracking="2" id="projectorControls" class="topButtons">
           <x-button id="reloadBtn" class="danger btn" title="Click to reload the application">
-            <x-icon name="power-settings-new" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
+            <x-icon name="power-settings-new" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
           </x-button>
           <x-button id="disclamerBtn" class="hidden btn">
-            <x-icon name="assignment" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
+            <x-icon name="assignment" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
           </x-button>
           <x-button id="projectorBtn" title="Click to open projection window" class="btn">
-            <x-icon name="airplay" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
+            <x-icon name="airplay" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
           </x-button>
           <x-button id="fullscreenBtn" title="Click to make projection window fullscreen" class="btn">
-            <x-icon name="fullscreen" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
+            <x-icon name="fullscreen" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
           </x-button>
 
 
@@ -36,11 +36,11 @@
         <div id="mediaControlsDiv" class="hidden">
         <x-buttons tracking="-1" id="audiovideoControls" class="topButtons audiovideoControls">
           <x-button id="playPauseMediaBtn" class="btn">
-            <x-icon name="play-arrow" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
+            <x-icon name="play-arrow" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
           </x-button>
           <x-slider id="audioVideoSlider" value="1"></x-slider>
           <x-button id="restartMediaBtn" class="btn">
-            <x-icon name="replay" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
+            <x-icon name="replay" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
           </x-button>
         </x-buttons>
       </div>
@@ -49,12 +49,12 @@
             <x-buttons tracking="-1" id="gameControls" class="topButtons">
               <x-button id="nextSlideBtn" class="impressControlBtns btn">
                 <x-box>
-                  <x-icon name="skip-next" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
-                  <x-label id="nextSlideLabel" class="label">{{#i18n}}Next Slide{{/i18n}}</x-label>
+                  <x-icon name="skip-next" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
+                  <x-label id="nextSlideLabel" class="label">Ďalší snímok</x-label>
                 </x-box>
               </x-button>
               <x-button id="prevSlideBtn" class="danger impressControlBtns btn">
-                <x-icon name="backspace" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
+                <x-icon name="backspace" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
               </x-button>
             </x-buttons>
       </x-card>
@@ -67,36 +67,36 @@
         <x-tabs class="tabs" centered>
           <x-tab selected id="currentSlideTab" class="tab">
             <x-box>
-              <x-icon name="list" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
-              <x-label id="tabLabelCurrentSlide" class="label">{{#i18n}}Presentation{{/i18n}}</x-label>
+              <x-icon name="list" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
+              <x-label id="tabLabelCurrentSlide" class="label">Projekcia</x-label>
             </x-box>
           </x-tab>
 
 
           <x-tab id="remoteSourcesTab" class="hidden" class="tab">
             <x-box>
-              <x-icon name="settings" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
-              <x-label id="tabLabelRemoteSources" class="label">{{#i18n}}Remote Sources{{/i18n}}</x-label>
+              <x-icon name="settings" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
+              <x-label id="tabLabelRemoteSources" class="label">Iné zdroje</x-label>
             </x-box>
           </x-tab>
 
           <x-tab id="optionsTab" class="hidden" class="tab">
             <x-box>
-              <x-icon name="settings" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
-              <x-label id="tabLabelSettings" class="label">{{#i18n}}Options{{/i18n}}</x-label>
+              <x-icon name="settings" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
+              <x-label id="tabLabelSettings" class="label">Nastavenia</x-label>
             </x-box>
           </x-tab>
           <x-tab id="allSlidesTab" class="tab">
             <x-box>
-              <x-icon name="sort" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
-              <x-label id="tabLabelAllSlides" class="label">{{#i18n}}Slides List{{/i18n}}</x-label>
+              <x-icon name="sort" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
+              <x-label id="tabLabelAllSlides" class="label">Zoznam snímkov</x-label>
             </x-box>
           </x-tab>
         </x-tabs>
         <x-card id="contentCard">
 
           <div id="currentSlideDiv" class="content-table slidesPreview">
-            <webview id="impressCurrent" autosize src="{{{usrPath}}}/viewer.html" style="display:flex;" nodeintegration></webview>
+            <webview id="impressCurrent" autosize src="/home/gnaag/.config/impressPlayer/viewer.html" style="display:flex;" nodeintegration></webview>
             <div class="impressCurtain">
               <!-- The curtain preventing focusing webview element -->
             </div>
@@ -115,13 +115,13 @@
 
       <div id="sidebar">
           <x-card class="nextSlide nextSlide-1">
-            <webview id="nextImpress-1" class="slidesPreview" src="{{{usrPath}}}/previewer.html" autosize="on" minwidth="320px" minheight="180px" style="display:flex;" nodeintegration></webview>
+            <webview id="nextImpress-1" class="slidesPreview" src="/home/gnaag/.config/impressPlayer/previewer.html" autosize="on" minwidth="320px" minheight="180px" style="display:flex;" nodeintegration></webview>
             <div class="impressCurtain">
               <!-- The curtain preventing focusing webview element -->
             </div>
           </x-card>
           <x-card class="nextSlide nextSlide-2">
-            <webview id="nextImpress-2" class="slidesPreview" src="{{{usrPath}}}/previewer.html" autosize="on" minwidth="320px" minheight="180px" style="display:flex;" nodeintegration></webview>
+            <webview id="nextImpress-2" class="slidesPreview" src="/home/gnaag/.config/impressPlayer/previewer.html" autosize="on" minwidth="320px" minheight="180px" style="display:flex;" nodeintegration></webview>
             <div class="impressCurtain">
               <!-- The curtain preventing focusing webview element -->
             </div>
@@ -129,14 +129,14 @@
           <x-card class="additionalControls">
             <x-button id="refreshBtn" class="additionalBtns btn">
               <x-box>
-                <x-icon name="refresh" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
-                <x-label id="refreshLabel" class="label">{{#i18n}}Refresh presentation{{/i18n}}</x-label>
+                <x-icon name="refresh" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
+                <x-label id="refreshLabel" class="label">Refresh presentation</x-label>
               </x-box>
             </x-button>
             <x-button id="openFile" class="additionalBtns btn">
               <x-box>
-                <x-icon name="folder-open" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
-                <x-label id="refreshLabel" class="label">{{#i18n}}Load Presentation{{/i18n}}</x-label>
+                <x-icon name="folder-open" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
+                <x-label id="refreshLabel" class="label">Načítaj prezentáciu</x-label>
               </x-box>
             </x-button>
           </x-card>
@@ -152,19 +152,20 @@
     </div>
   </div>
   <dialog id="exitDialog">
-    <h4 id="exitTitle">{{#i18n}}Are you sure about exiting impressPlayer?{{/i18n}}</h4>
-    <p id="exitText">{{#i18n}}Actually nothing bad could happen if you exit now, but still. <br />Do you really want to do it?{{/i18n}}</p>
+    <h4 id="exitTitle">Si si istý, že chceš ukončiť impressPlayer?</h4>
+    <p id="exitText">Nič zlého sa vlastne nemôže stať, ale aj tak sa ťa pre istotu opýtam znova. 
+Naozaj to chceš urobiť?</p>
     <x-buttons tracking="-1" id="windowControls" class="exitBtns">
       <x-button id="reallyQuit" class="danger btn">
         <x-box>
-          <x-icon name="exit-to-app" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
-          <x-label id="exitAgree" class="label">{{#i18n}}Yes, get me out of here!{{/i18n}}</x-label>
+          <x-icon name="exit-to-app" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
+          <x-label id="exitAgree" class="label">Áno, dostaň ma odtiaľto!</x-label>
         </x-box>
       </x-button>
       <x-button id="doNotQuit" class="btn">
         <x-box>
-          <x-icon name="replay" iconset="{{{appPath}}}/node_modules/xel/images/icons.svg"></x-icon>
-          <x-label id="exitDisagree" class="label">{{#i18n}}No, I haven't finished yet{{/i18n}}</x-label>
+          <x-icon name="replay" iconset="/home/gnaag/Programy/impressPlayer/node_modules/xel/images/icons.svg"></x-icon>
+          <x-label id="exitDisagree" class="label">Nie, ešte som neskončil</x-label>
         </x-box>
       </x-button>
     </x-buttons>
@@ -173,8 +174,8 @@
 
 <script id="require">
   <!--// You can also require other files to run in this process
-  require({{{consolePath}}});
-  //require("consolePathPlaceHolder");
+  require("/home/gnaag/Programy/impressPlayer/js/controller-script.js");
+  //require("controllerPathPlaceHolder");
 </script>
 
 </html>
